// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer component Localisation should render en-id 1`] = `
<footer
  className="container"
>
  <FooterLinks
    messages={
      Object {
        "footer.aboutLink": "https://jobstreet.co.id/en/about-us/",
        "footer.aboutLinkText": "About Us",
        "footer.copyright": "Copyright © {year} JobStreet.com",
        "footer.feedbackLink": "https://myjobstreet.jobstreet.co.id/home/feedback.php?site=id&sub=feedback",
        "footer.feedbackLinkText": "Send Feedback",
        "footer.helpLink": "https://jobstreet.co.id/en/user/",
        "footer.helpLinkText": "Help",
        "footer.link": "https://www.jobstreet.com",
        "footer.linkText": "JobStreet International",
        "footer.privacyLink": "https://jobstreet.co.id/en/about-us/privacy-policy/",
        "footer.privacyLinkText": "Privacy Policy",
        "footer.profilesLink": "https://jobstreet.co.id/en/companies/778589-jobstreet",
        "footer.profilesLinkText": "Work With Us",
        "footer.safeLink": "https://jobstreet.co.id/en/about-us/safe-job-search-guide/",
        "footer.safeLinkText": "Safe Job Search Guide",
        "footer.siteMapLink": "https://jobstreet.co.id/sitemap.htm",
        "footer.siteMapLinkText": "Site Map",
        "footer.termsLink": "https://jobstreet.co.id/en/about-us/terms-of-use/",
        "footer.termsLinkText": "Term of Use",
      }
    }
  />
  <p
    className="copyright"
  >
    Copyright © 2017 JobStreet.com
  </p>
</footer>
`;

exports[`Footer component Localisation should render en-my 1`] = `
<footer
  className="container"
>
  <FooterLinks
    messages={
      Object {
        "footer.aboutLink": "https://jobstreet.com.my/en/about-us/",
        "footer.aboutLinkText": "About Us",
        "footer.copyright": "Copyright © {year} JobStreet.com",
        "footer.feedbackLink": "https://myjobstreet.jobstreet.com.my/home/feedback.php?site=my&sub=feedback",
        "footer.feedbackLinkText": "Send Feedback",
        "footer.helpLink": "https://jobstreet.com.my/en/user/",
        "footer.helpLinkText": "Help",
        "footer.link": "https://www.jobstreet.com",
        "footer.linkText": "JobStreet International",
        "footer.privacyLink": "https://jobstreet.com.my/en/about-us/privacy-policy/",
        "footer.privacyLinkText": "Privacy Policy",
        "footer.profilesLink": "https://jobstreet.com.my/career/JobStreet.htm",
        "footer.profilesLinkText": "Work With Us",
        "footer.safeLink": "https://jobstreet.com.my/en/about-us/safe-job-search-guide/",
        "footer.safeLinkText": "Safe Job Search Guide",
        "footer.siteMapLink": "https://jobstreet.com.my/sitemap.htm",
        "footer.siteMapLinkText": "Site Map",
        "footer.termsLink": "https://jobstreet.com.my/en/about-us/terms-of-use/",
        "footer.termsLinkText": "Term of Use",
        "header.careerInsightsLink": "https://jobstreet.com.my/en/career-insights",
        "header.careerInsightsText": "Career Insights",
        "header.careerInsightsTitle": "JobStreet.com Malaysia - Career Insights",
        "header.classifiedJobsLink": "https://www.jobstreet.com.my/en/job-search/classified-ads.php",
        "header.classifiedJobsText": "Classified Jobs",
        "header.classifiedJobsTitle": "",
        "header.companyProfilesLink": "https://jobstreet.com.my/en/companies",
        "header.companyProfilesText": "Company Profiles",
        "header.companyProfilesTitle": "JobStreet.com Malaysia - Company Profiles",
        "header.employerLink": "https://jobstreet.com.my/en/cms/employer",
        "header.employerText": "Employer",
        "header.employerTitle": "Post a Job Ad: +603-2176 0333",
        "header.freshGradJobsLink": "https://www.jobstreet.com.my/en/job-search/campus/job-vacancy.php",
        "header.freshGradJobsText": "Fresh Grad Jobs",
        "header.freshGradJobsTitle": "",
        "header.helpLink": "https://myjobstreet.jobstreet.com.my/home/help.php?",
        "header.helpText": "Help",
        "header.helpTitle": "",
        "header.homeLink": "https://jobstreet.com.my",
        "header.homeText": "Home",
        "header.homeTitle": "Leading Job Site in Malaysia - Find Jobs in Malaysia",
        "header.jobStreetEducationLink": "https://www.jobstreeteducation.com.my/",
        "header.jobStreetEducationText": "Education",
        "header.jobStreetEducationTitle": "",
        "header.loginLink": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my&language_code=3",
        "header.loginText": "Log In",
        "header.loginTitle": "",
        "header.logoutLink": "https://myjobstreet.jobstreet.com.my/home/logout.php?",
        "header.logoutText": "Logout",
        "header.logoutTitle": "",
        "header.moreText": "More",
        "header.moreTitle": "",
        "header.myAccountLink": "https://myjobstreet.jobstreet.com.my/registration/update-account.php?",
        "header.myAccountText": "My Account",
        "header.myAccountTitle": "",
        "header.myJobStreetLink": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
        "header.myJobStreetLoggedInLink": "https://myjobstreet.jobstreet.com.my/resume/preview-resume.php?",
        "header.myJobStreetText": "MyJobStreet",
        "header.myJobStreetTitle": "Post Resume, Signup for Job Alert & Apply for Jobs @ MyJobStreet Malaysia",
        "header.overseasJobsLink": "https://www.jobstreet.com.my/en/job-search/browse/find-overseas-jobs",
        "header.overseasJobsText": "Overseas Jobs",
        "header.overseasJobsTitle": "",
        "header.searchLink": "https://srp-alpha.jobstreet.com",
        "header.searchText": "Search Jobs",
        "header.searchTitle": "Search Jobs @ Job Search JobStreet.com Malaysia",
        "header.signUpLink": "https://myjobstreet.jobstreet.com.my/registration/simple-signup.php?site=my&language_code=3",
        "header.signUpText": "Sign Up",
        "header.signUpTitle": "",
      }
    }
  />
  <p
    className="copyright"
  >
    Copyright © 2017 JobStreet.com
  </p>
</footer>
`;

exports[`Footer component Localisation should render en-ph 1`] = `
<footer
  className="container"
>
  <FooterLinks
    messages={
      Object {
        "footer.aboutLink": "https://jobstreet.com.ph/en/about-us/",
        "footer.aboutLinkText": "About Us",
        "footer.copyright": "Copyright © {year} JobStreet.com",
        "footer.feedbackLink": "https://myjobstreet.jobstreet.com.ph/home/feedback.php?site=ph&sub=feedback",
        "footer.feedbackLinkText": "Send Feedback",
        "footer.helpLink": "https://jobstreet.com.ph/en/user/",
        "footer.helpLinkText": "Help",
        "footer.link": "https://www.jobstreet.com",
        "footer.linkText": "JobStreet International",
        "footer.privacyLink": "https://jobstreet.com.ph/en/about-us/privacy-policy/",
        "footer.privacyLinkText": "Privacy Policy",
        "footer.profilesLink": "https://www.jobstreet.com.ph/en/companies/507168-jobstreet-philippines-inc-ph",
        "footer.profilesLinkText": "Work With Us",
        "footer.safeLink": "https://jobstreet.com.ph/en/about-us/safe-job-search-guide/",
        "footer.safeLinkText": "Safe Job Search Guide",
        "footer.siteMapLink": "https://jobstreet.com.ph/sitemap.htm",
        "footer.siteMapLinkText": "Site Map",
        "footer.termsLink": "https://jobstreet.com.ph/en/about-us/terms-of-use/",
        "footer.termsLinkText": "Term of Use",
      }
    }
  />
  <p
    className="copyright"
  >
    Copyright © 2017 JobStreet.com
  </p>
</footer>
`;

exports[`Footer component Localisation should render en-sg 1`] = `
<footer
  className="container"
>
  <FooterLinks
    messages={
      Object {
        "footer.aboutLink": "https://jobstreet.com.sg/en/about-us/",
        "footer.aboutLinkText": "About Us",
        "footer.copyright": "Copyright © {year} JobStreet.com",
        "footer.feedbackLink": "https://myjobstreet.jobstreet.com.sg/home/feedback.php?site=sg&sub=feedback",
        "footer.feedbackLinkText": "Send Feedback",
        "footer.helpLink": "https://jobstreet.com.sg/en/user/",
        "footer.helpLinkText": "Help",
        "footer.link": "https://www.jobstreet.com",
        "footer.linkText": "JobStreet International",
        "footer.privacyLink": "https://jobstreet.com.sg/en/about-us/privacy-policy/",
        "footer.privacyLinkText": "Privacy Policy",
        "footer.profilesLink": "https://jobstreet.com.sg/career/JobStreet.htm",
        "footer.profilesLinkText": "Work With Us",
        "footer.safeLink": "https://jobstreet.com.sg/en/about-us/safe-job-search-guide/",
        "footer.safeLinkText": "Safe Job Search Guide",
        "footer.siteMapLink": "https://jobstreet.com.sg/sitemap.htm",
        "footer.siteMapLinkText": "Site Map",
        "footer.termsLink": "https://jobstreet.com.sg/en/about-us/terms-of-use/",
        "footer.termsLinkText": "Term of Use",
      }
    }
  />
  <p
    className="copyright"
  >
    Copyright © 2017 JobStreet.com
  </p>
</footer>
`;

exports[`Footer component Localisation should render en-vn 1`] = `
<footer
  className="container"
>
  <FooterLinks
    messages={
      Object {
        "footer.aboutLink": "https://jobstreet.vn/en/about-us/",
        "footer.aboutLinkText": "About Us",
        "footer.copyright": "Copyright © {year} JobStreet.com",
        "footer.feedbackLink": "https://myjobstreet.jobstreet.vn/home/feedback.php?site=vn&sub=feedback",
        "footer.feedbackLinkText": "Send Feedback",
        "footer.helpLink": "https://jobstreet.vn/en/user/",
        "footer.helpLinkText": "Help",
        "footer.link": "https://www.jobstreet.com",
        "footer.linkText": "JobStreet International",
        "footer.privacyLink": "https://jobstreet.vn/en/about-us/privacy-policy/",
        "footer.privacyLinkText": "Privacy Policy",
        "footer.profilesLink": "https://jobstreet.vn/en/companies/762582-jobstreet-company-limited-vn",
        "footer.profilesLinkText": "Work With Us",
        "footer.safeLink": "https://jobstreet.vn/en/about-us/safe-job-search-guide/",
        "footer.safeLinkText": "Safe Job Search Guide",
        "footer.siteMapLink": "https://jobstreet.vn/sitemap.htm",
        "footer.siteMapLinkText": "Site Map",
        "footer.termsLink": "https://jobstreet.vn/en/about-us/terms-of-use/",
        "footer.termsLinkText": "Term of Use",
      }
    }
  />
  <p
    className="copyright"
  >
    Copyright © 2017 JobStreet.com
  </p>
</footer>
`;

exports[`Footer component Localisation should render id-id 1`] = `
<footer
  className="container"
>
  <FooterLinks
    messages={
      Object {
        "footer.aboutLink": "https://jobstreet.co.id/id/about-us/",
        "footer.aboutLinkText": "Tentang Kami",
        "footer.copyright": "Hak Cipta © {year} JobStreet.com",
        "footer.feedbackLink": "https://myjobstreet.jobstreet.co.id/home/feedback.php?site=id&sub=feedback",
        "footer.feedbackLinkText": "Kirim Saran",
        "footer.helpLink": "https://jobstreet.co.id/id/user/",
        "footer.helpLinkText": "Bantuan",
        "footer.link": "https://www.jobstreet.com",
        "footer.linkText": "JobStreet Internasional",
        "footer.privacyLink": "https://jobstreet.co.id/id/about-us/kebijakan-privasi/",
        "footer.privacyLinkText": "Kebijakan Kerahasiaan",
        "footer.profilesLink": "https://jobstreet.co.id/en/companies/778589-jobstreet",
        "footer.profilesLinkText": "Berkarier bersama Kami",
        "footer.safeLink": "https://jobstreet.co.id/id/about-us/panduan-dan-tips-mencari-kerja-online-secara-aman/",
        "footer.safeLinkText": "Panduan Mencari Kerja Secara Aman",
        "footer.siteMapLink": "https://jobstreet.co.id/sitemap.htm",
        "footer.siteMapLinkText": "Site Map",
        "footer.termsLink": "https://jobstreet.co.id/id/about-us/ketentuan-penggunaan/",
        "footer.termsLinkText": "Ketentuan Penggunaan",
      }
    }
  />
  <p
    className="copyright"
  >
    Hak Cipta © 2017 JobStreet.com
  </p>
</footer>
`;

exports[`Footer component Localisation should render vi-vn 1`] = `
<footer
  className="container"
>
  <FooterLinks
    messages={
      Object {
        "footer.aboutLink": "https://jobstreet.vn/vi/about-us/",
        "footer.aboutLinkText": "Về JobStreet",
        "footer.copyright": "Copyright © {year} JobStreet.com",
        "footer.feedbackLink": "https://myjobstreet.jobstreet.vn/home/feedback.php?site=vn&sub=feedback",
        "footer.feedbackLinkText": "Gửi Phản Hồi",
        "footer.helpLink": "https://jobstreet.vn/vi/user/",
        "footer.helpLinkText": "Trợ Giúp",
        "footer.link": "https://www.jobstreet.com",
        "footer.linkText": "JobStreet Quốc Tế",
        "footer.privacyLink": "https://jobstreet.vn/vi/about-us/chinh-sach-bao-mat/",
        "footer.privacyLinkText": "Chính Sách Bảo Mật",
        "footer.profilesLink": "https://jobstreet.vn/vi/companies/762582-jobstreet-company-limited-vn",
        "footer.profilesLinkText": "Cơ Hội Nghề Nghiệp",
        "footer.safeLink": "https://jobstreet.vn/vi/about-us/huong-dan-va-bi-quyet-tim-viec-truc-tuyen-an-toan/",
        "footer.safeLinkText": "Mẹo Tìm Việc An Toàn",
        "footer.siteMapLink": "https://jobstreet.vn/sitemap.htm",
        "footer.siteMapLinkText": "Site Map",
        "footer.termsLink": "https://jobstreet.vn/vi/about-us/dieu-khoan-su-dung/",
        "footer.termsLinkText": "Điều Khoản Sử Dụng",
      }
    }
  />
  <p
    className="copyright"
  >
    Copyright © 2017 JobStreet.com
  </p>
</footer>
`;
